--- a/1/index.html
+++ b/1/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 
 <html><!--<![endif]--><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<meta http-equiv="Pragma" content="no-cache">
@@ -19,7 +19,8 @@
 				<img src="./jscss/幻灯片1.jpg" >
 			</div>
 			<div id="" class="ft-page page-3 left-img past-section future-page" data-id="__page-3" data-prog="__3">
-				
+
+				<h3>晚上小明会把小红送回家</h3>
 				<img src="./jscss/幻灯片2.jpg" >
 			</div>
 			<div id="" class="ft-page page-4 full-img past-section future-page" data-id="__page-4" data-prog="__4">
