--- a/1/index.html
+++ b/1/index.html
@@ -15,16 +15,15 @@
 				<p class="text2">按键盘 "↓" 开始倾听我的祝福</p>
 			</div>
 			<div id="" class="ft-page page-2 past-section future-page" data-id="__page-2" data-prog="__2">
-			
+				<h3>晚上小明会把小红送回家</h3>
 				<img src="./jscss/幻灯片1.jpg" >
 			</div>
 			<div id="" class="ft-page page-3 left-img past-section future-page" data-id="__page-3" data-prog="__3">
-
 				<h3>晚上小明会把小红送回家</h3>
 				<img src="./jscss/幻灯片2.jpg" >
 			</div>
 			<div id="" class="ft-page page-4 full-img past-section future-page" data-id="__page-4" data-prog="__4">
-				
+				<h3>晚上小明会把小红送回家</h3>
 				<img src="./jscss/幻灯片3.jpg" >
 			</div>
 		</div>
